Fixed forgot password text alignment [#173468302]

--- a/src/components/SignInModal/SignInModal.module.scss
+++ b/src/components/SignInModal/SignInModal.module.scss
@@ -23,3 +23,7 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.forgot-password {
+  text-align: right !important;
+}
